--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   div.products-container
+    a(href='/products/add') Add Product
     table
       thead
       th Product Name
