finished- no css

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,15 +5,15 @@ block content
     a(href='/products/add') Add Product
     table
       thead
-      th Product Name
-      th Rating
-      th Category
-      th
-    tbody
-      each product in products
-        tr
-          td= product.product_name
-          td 5
-          td= product.category
-          td
-            a(href=`/products/profile/${product.id}`) View Product
+        th Product Name
+        th Rating
+        th Category
+        th
+      tbody
+        each product in products
+          tr
+            td= product.product_name
+            td= product.rating
+            td= product.category
+            td
+              a(href=`/products/profile/${product.id}`) View Product
