--- a/views/mixins/productForm.pug
+++ b/views/mixins/productForm.pug
@@ -15,4 +15,4 @@ mixin productForm(product, categories, saveUrl, cancelUrl)
                 textarea(id='description' name='description' rows=10 cols=80) #{product.description}
             div.form-buttons
                 a.button(href=cancelUrl) Cancel
-                button.button(type='submit') Save
+                button.button.primary(type='submit') Save
